tests/messages/valid/orm_o01_order.hl7
MSH|^~\&|ORDER_APP|HOSP|LAB|HOSP|20260220140000||ORM^O01|MSG0012|P|2.3
PID|1||1007^^^HOSP^MR||Mueller^Karl||19750315|M
PV1|1|O|OUTPATIENT
ORC|NW|ORD-2024-001|||||^^^20260220140000^^R
OBR|1|ORD-2024-001||CBC^Complete Blood Count|||20260220140000||||G|FASTING|||1234^Doctor^Andrew||LAB001
