tests/messages/errors/err_orm_missing_orc.hl7
MSH|^~\&|ORDER_APP|HOSP|LAB|HOSP|20260220136000||ORM^O01|MSG0015|P|2.3
PID|1||2003^^^HOSP^MR||Test^NoOrc||19750601|M
OBR|1|ORD-MISSING-ORC||CBC^Complete Blood Count|||20260220136000
